--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,10 @@
+name: careerbuddy
+
 services:
   api:
-    build: ./backend
+    build:
+      context: ./backend
+      dockerfile: Dockerfile
     command: uvicorn app.main:app --host 0.0.0.0 --port ${APP_PORT:-8000}
     env_file: .env
     ports:
