--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -13,7 +13,8 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
 RUN pip install --upgrade pip && \
     pip install "fastapi>=0.115,<0.116" "uvicorn[standard]>=0.30,<0.31" \
                "httpx>=0.27,<0.28" "redis>=5,<6" "loguru>=0.7,<0.8" \
-               "pydantic>=2,<3" "SQLAlchemy>=2,<3" "psycopg[binary]>=3.1,<3.2"
+               "pydantic>=2,<3" "SQLAlchemy>=2,<3" "psycopg[binary]>=3.1,<3.2" \
+               "alembic>=1.13,<2" "celery[redis]>5.3,<6"
 
 # With build context = ./backend, the app folder is right here
 COPY app ./app
