--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,9 @@ services:
     build:
       context: ./backend
       dockerfile: Dockerfile
+    volumes:
+      - ./backend:/app
+
     command: uvicorn app.main:app --host 0.0.0.0 --port ${APP_PORT:-8000}
     env_file: .env
     ports:
@@ -13,6 +16,8 @@ services:
       - redis
       - postgres
     restart: unless-stopped
+
+    # command: uvicorn app.main:app --host 0.0.0.0 --port ${APP_PORT:-8000} --reload
 
   redis:
     image: redis:7-alpine
@@ -31,6 +36,20 @@ services:
     volumes:
       - pgdata:/var/lib/postgresql/data
     restart: unless-stopped
+
+  worker:
+    build:
+      context: ./backend
+      dockerfile: Dockerfile
+    command: celery -A app.celery_app.celery_app worker --loglevel=info --concurrency=2
+    env_file: .env
+    depends_on:
+      - redis
+      - api
+    restart: unless-stopped
+
+    volumes:
+      - ./backend:/app
 
 volumes:
   pgdata:
