--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,43 @@
+# Environment variables
 .env
 .env.*
+
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+*.egg-info/
+dist/
+build/
+*.egg
+
+# Virtual environments
+.venv/
+venv/
+ENV/
+env/
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+.DS_Store
+.claude/
+
+# Output files
+backend/output/
+*.pdf
+
+# Database
+*.db
+*.sqlite
+
+# Logs
+*.log
+
+# Docker volumes data
+postgres_data/
+redis_data/
