--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -13,10 +13,24 @@ httpx = "^0.27.0"
 redis = "^5.0.7"
 loguru = "^0.7.2"
 
-# For later phases (already safe to install)
+# Database & ORM
 SQLAlchemy = "^2.0.29"
 psycopg = {version = "^3.1.19", extras = ["binary"]}
+alembic = "^1.13.0"
+
+# Task Queue
 celery = "^5.4.0"
+
+# Document Generation
+python-docx = "^1.1.0"
+jinja2 = "^3.1.0"
+
+# AI/LLM Integration
+anthropic = "^0.39.0"
+openai = "^1.0.0"
+
+# File Storage
+boto3 = "^1.35.0"
 
 [tool.poetry.group.dev.dependencies]
 black = "^24.8.0"
