Refactor: Complete migration from WhatsApp/WAHA to Telegram Bot API

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -29,6 +29,9 @@ jinja2 = "^3.1.0"
 anthropic = "^0.39.0"
 openai = "^1.0.0"
 
+# Telegram Bot
+python-telegram-bot = "^21.0"
+
 # File Storage
 boto3 = "^1.35.0"
 
