--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -24,6 +24,7 @@ celery = "^5.4.0"
 # Document Generation
 python-docx = "^1.1.0"
 jinja2 = "^3.1.0"
+reportlab = "^4.0.0"
 
 # AI/LLM Integration
 anthropic = "^0.39.0"
